--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                   </div>
                </div>
             </div>
-            <a href="testimonial.html" class="btn btn-warning mt-4 text-center">Read full foreword & testimonials</a>
+            <!-- <a href="testimonial.html" class="btn btn-warning mt-4 text-center">Read full foreword & testimonials</a> -->
          </div>
          </div>
       </section>
@@ -312,7 +312,7 @@
                      </li>
                   </ul>
                   <p class="lead text-dark mb-4 pb-2">Please note that readers pursuing cutting-edge research in NLP may find some sections of the book rudimentary as we do not cover in-depth theoretical and technical details related to NLP concepts. Moreover, we expect the readers to follow the respective documentations for various frameworks we use in our code examples.</p>
-                  <a href="" class="btn btn-warning">Know what you will learn</a>
+                  <a href="#bookwiki" class="btn btn-warning">Know what you will learn</a>
                </div>
             </div>
          </div>
@@ -387,7 +387,7 @@
 
 
       <!-- What you will learn Start -->
-      <section class="section">
+      <section class="section" id="bookwiki">
          <div class="container">
          <div class="row align-items-center">
             <div class="col-lg-12">
