adding read by section

--- a/events.html
+++ b/events.html
@@ -101,17 +101,17 @@
       </section>
       <!-- Hero End -->
       <!-- Testimonial Start -->
-      <section class="section bg-light " id="testimonials">
+      <section class="section bg-light " id="events">
          <div class="container">
             <div class="row justify-content-left">
                <div class="col-lg-12 col-md-8">
                   <div class="title text-left mb-5">
-                     <h1 class="font-weight-bold text-dark"> Testimonials
+                     <h1 class="font-weight-bold text-dark"> Events
                      </h1>
                   </div>
                </div>
             </div>
-            <div class="row align-items-center" id="zachary">
+            <div class="row align-items-center" id="iimc">
                <div class="col-md-4" >
                   <div class="features-img author-item">
                      <img src="images/quotes/zach.jpg" alt="" class="img-fluid d-block mx-auto">
@@ -131,7 +131,7 @@
                </div>
             </div>
             <hr class="hr-dark">
-            <div class="row align-items-center" id="sebastian">
+            <div class="row align-items-center" id="bay_nlp">
                <div class="col-md-4" >
                   <div class="features-img author-item">
                      <img src="images/quotes/ruder.jpg" alt="" class="img-fluid d-block mx-auto">
@@ -151,7 +151,7 @@
                </div>
             </div>
             <hr class="hr-dark">
-            <div class="row align-items-center" id="marc">
+            <div class="row align-items-center" id="msr">
                <div class="col-md-4" >
                   <div class="features-img author-item">
                      <img src="images/quotes/marc.jpg" alt="" class="img-fluid d-block mx-auto">
