--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
          <div class="container">
             <!-- LOGO -->
             <a class="navbar-brand logo" href="index.html">
-                <img src="images/logo.png" alt="" class="" height="21">
+                <img src="images/logo.png" alt="" class="" height="31">
             </a>
             <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
@@ -65,6 +65,9 @@
                   </li>
                   <li class="nav-item">
                      <a href="#testimonials" class="nav-link">Testimonials</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#faq" class="nav-link">FAQs</a>
                   </li>
                   <li class="nav-item">
                      <a href="#blog" class="nav-link">Blog (coming soon)</a>
@@ -134,6 +137,16 @@
                         <!-- </p>
                            <p class="lead">Overall diagram -->
                      </p>
+                     <br>
+
+                     <center>
+                     <h3 class="font-weight-bold text-dark">Read by professionals at
+                     </h3>
+                     </center>
+                     <br>
+
+                        <img src="images/corp-logos.png" class="img-responsive" style="    max-width: 800px;margin:  0 auto;display: block;margin-bottom: 3%;"></a>
+
                   </div>
                </div>
             </div>
@@ -228,7 +241,7 @@
                   <div class="author-item text-center">
                      <img src="images/quotes/mengting.jpg">
                      <h4 class="text-light"><a href="https://mengtingwan.github.io/">Mengting Wan</a></h4>
-                     <p class="text-light mb-0"> Data Scientist (ML & NLP) at Airbnb
+                     <p class="text-light mb-0"> Data Scientist at Airbnb
                      </p>
                      <p class=" text-light mb-0"> 
                         Microsoft Research Fellow
@@ -284,7 +297,7 @@
                   </div>
                </div>
             </div>
-            <a href="testimonial.html" class="btn btn-warning mt-4 text-center">Read full foreword & testimonials</a>
+            <a href="testimonial.html#testimonials" class="btn btn-warning mt-4 text-center">Read full foreword & testimonials</a>
          </div>
          </div>
       </section>
@@ -422,6 +435,101 @@
 <!-- What you will learn End -->
 
 
+<!-- Events Start-->
+
+<section class="section text-center bg-dark pb-0" id="buythebook" >
+   <div class="container">
+      <div class="row justify-content-center">
+         <div class="col-lg-6 col-md-8">
+            <div class="title text-center mb-5">
+               <h1 class="hero-1-title mb-4 text-light">Events & Webinars</h1>
+               <p class="lead text-center">
+                        <strong> Slides & talks for events will be updated soon</strong>
+                     </p>
+            </div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-lg-4 " >
+            <div class="f-box">
+               <img class="cover-img" src="images/events/iim_calcutta.jpeg" height="200">
+               <div style="font-size: 120%; padding-top: 30px;">IIM Calcutta PGDBA Webinar</div>
+               <div style="padding-top: 5px;">8th August</div>
+
+               <div class="text-center">
+                  <a class="btn btn-primary btn-xl js-scroll-trigger" style="background-color: #f9680e;border-color: #ff914c; margin-top: 20px;" href="#">Coming soon</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-4 mx-auto" >
+            <div class="f-box">
+               <img class="cover-img" src="images/events/bay-nlp.jpeg" height="200">
+               <div style="font-size: 120%; padding-top: 30px;" >Bay Area NLP Meetup</div>
+               <div style="padding-top: 5px;">30th July</div>
+               <div class="text-center">
+                  <a class="btn btn-primary btn-xl js-scroll-trigger" style="background-color: #f9680e;border-color: #ff914c; margin-top: 20px;" href="#">Coming soon</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-lg-4 mx-auto" >
+            <div class="f-box">
+               <img class="cover-img" src="images/events/msr.jpg" height="200">
+               <div style="font-size: 120%; padding-top: 30px;" >Microsoft Research NLP Lunch</div>
+               <div style="padding-top: 5px;">1st July</div>
+               <div class="text-center">
+                  <a class="btn btn-primary btn-xl js-scroll-trigger" style="background-color: #f9680e;border-color: #ff914c; margin-top: 20px;" href="#">Coming soon</a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <br><br>
+</section>
+<!-- Events End -->
+
+
+      <!-- FAQ Start -->
+      <section class="section" id="faq" >
+         <div class="container">
+         <div class="row align-items-center">
+            <div class="col-lg-12">
+                  <!-- <hr class="hr-dark"> -->
+               <div class="hero-title pr-lg-5">
+                  <div class="row">
+                     <div class="col-lg-12">
+                        <h1 class="hero-1-title mb-4 text-dark">Frequently Asked Questions</h1>
+                        <br><br>
+                        <h5 class="font-weight-bold text-dark">Can print buyers view the color version?
+                        </h5>
+                        <p class="lead">
+                           We are aware that some of the color figures are not legible in black and white in the paperback versions. We are working closely with O'Reilly Media to release high-quality color versions of those affected images soon for our readers. 
+                        </p>
+                        <br>
+                        <h5 class="font-weight-bold text-dark">Where can we view and submit errata for the book?
+                        </h5>
+                        <p class="lead">
+                           The errata of the book is accessible <a style="color: #C0392B; font-weight: 500" href="https://www.oreilly.com/catalog/errata.csp?isbn=0636920262329">here</a>. We thank our diligent readers who pointed out these points which we overlooked in our first edition. You can also submit any requests for techical or grammatical changes <a  style="color: #C0392B; font-weight: 500" href="https://www.oreilly.com/cs/catalog/create/errata/?b=68193">here</a>.
+                        </p>
+                        <br>
+                        <h5 class="font-weight-bold text-dark">Does this book have an accompanying code repository?
+                        </h5>
+                        <p class="lead">
+                           The accompanying code for our book is publicly available in the <a style="color: #C0392B; font-weight: 500" href="https://github.com/practical-nlp/practical-nlp">repository</a>. This repository is constantly evolving and under-review as we are updating the code with additional information going beyond what book covers.
+                        </p>
+                        <br>
+
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+<!-- FAQ End -->
+
+
+
+
 <!-- Get the book Start-->
 
       <section class="section text-center bg-dark pb-0" id="buythebook" >
@@ -446,7 +554,7 @@
                <div class="col-lg-4 mx-auto" >
                   <div class="f-box">
                      <img src="images/book.png" height="200">
-                     <div style="font-size: 120%; padding-top: 30px;" >O’Reiily Safari</div>
+                     <div style="font-size: 120%; padding-top: 30px;" >O’Reilly Safari</div>
                      <div class="text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" style="background-color: #f9680e;border-color: #ff914c; margin-top: 20px;" href="https://learning.oreilly.com/library/view/practical-natural-language/9781492054047/">Read Online</a>
                      </div>
@@ -463,8 +571,13 @@
                </div>
             </div>
          </div>
+         <br><br>
       </section>
       <!-- Get the book End -->
+
+
+
+
 
 
 
@@ -492,12 +605,19 @@
                    </div>
                </div>
                </div>-->
-            <hr class="hr-light">
+            <!-- <hr class="hr-light"> -->
             <div class="row justify-content-center">
                <div class="col-lg-6">
                   <div class="row ">
                      <div class="col-md-12">
                         <div class="text-center text-light">
+                           <ul class="footer-social-list">
+                              <li class="list-inline-item"><a href="https://www.linkedin.com/company/practical-nlp/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                              <li class="list-inline-item"><a href="https://twitter.com/PracticalNLProc"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                              <li class="list-inline-item"><a href="https://github.com/practical-nlp/practical-nlp"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                           </ul>
+            <hr class="hr-light">
+            
                            <p class="mb-0 f-15">2020 © Practical Natural Language Processing.</p>
                            <p class="mb-0 f-15"> Made with <i class="fa fa-heart" aria-hidden="true"></i>
                               in Bangalore by <a href="https://codetrappers.com/" target="_blank">CodeTrappers</a> 
