.DS_Store removed

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
                      <a href="#home" class="nav-link">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a href="#about-book" class="nav-link">About the book</a>
+                     <a href="#about-book" class="nav-link">About</a>
                   </li>
                   <li class="nav-item">
                      <a href="#testimonials" class="nav-link">Testimonials</a>
+                  </li>
+                  <li class="nav-item">
+                     <a href="#courses" class="nav-link">Courses</a>
                   </li>
                   <li class="nav-item">
                      <a href="#faq" class="nav-link">FAQs</a>
@@ -325,7 +328,19 @@
                      </li>
                   </ul>
                   <p class="lead text-dark mb-4 pb-2">Please note that readers pursuing cutting-edge research in NLP may find some sections of the book rudimentary as we do not cover in-depth theoretical and technical details related to NLP concepts. Moreover, we expect the readers to follow the respective documentations for various frameworks we use in our code examples.</p>
-                  <a href="" class="btn btn-warning">Know what you will learn</a>
+                  <!-- <a href="" class="btn btn-warning">Know what you will learn</a> -->
+
+                  <br id="courses">
+
+                  <center>
+                  <h3 class="font-weight-bold text-dark">Used for courses at
+                  </h3>                  
+                  </center>
+
+                     <img src="images/acad-logos.png" class="img-responsive" style="    max-width: 800px;margin:  0 auto;display: block;margin-bottom: 3%;"></a>
+                     <center>
+                     <p class="lead text-dark mb-4 pb-2">Practical NLP is used as a reference book or a textbook at above-noted universities.</p>
+</center>
                </div>
             </div>
          </div>
@@ -502,7 +517,7 @@
                         <h5 class="font-weight-bold text-dark">Can print buyers view the color version?
                         </h5>
                         <p class="lead">
-                           We are aware that some of the color figures are not legible in black and white in the paperback versions. We are working closely with O'Reilly Media to release high-quality color versions of those affected images soon for our readers. 
+                           We are aware that some of the color figures are not legible in black and white in the paperback versions. So we have worked  with O'Reilly Media to release higher-quality color versions of all images. They can be viewed for each chapter in our <a style="color: #C0392B; font-weight: 500" href="https://github.com/practical-nlp/practical-nlp">repository</a> as well as download from <a  style="color: #C0392B; font-weight: 500"  href="https://github.com/practical-nlp/practical-nlp-figures">practical-nlp-figures.</a>  
                         </p>
                         <br>
                         <h5 class="font-weight-bold text-dark">Where can we view and submit errata for the book?
@@ -517,6 +532,13 @@
                            The accompanying code for our book is publicly available in the <a style="color: #C0392B; font-weight: 500" href="https://github.com/practical-nlp/practical-nlp">repository</a>. This repository is constantly evolving and under-review as we are updating the code with additional information going beyond what book covers.
                         </p>
                         <br>
+
+                        <!-- <h5 class="font-weight-bold text-dark">Does the book contain step by step code walk throughs?
+                        </h5>
+                        <p class="lead">
+                           The accompanying code for our book is publicly available in the <a style="color: #C0392B; font-weight: 500" href="https://github.com/practical-nlp/practical-nlp">repository</a>. This repository is constantly evolving and under-review as we are updating the code with additional information going beyond what book covers.
+                        </p>
+                        <br> -->
 
                      </div>
                   </div>
