Adding courses & instructor info

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                   <li class="nav-item active">
                      <a href="#home" class="nav-link">Home</a>
                   </li>
-                  <li class="nav-item">
+<!--                   <li class="nav-item">
                      <a href="#about-book" class="nav-link">About</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                      <a href="#testimonials" class="nav-link">Testimonials</a>
                   </li>
                   <li class="nav-item">
-                     <a href="#courses" class="nav-link">Courses</a>
+                     <a href="#courses" class="nav-link">Instructor Resources</a>
                   </li>
                   <li class="nav-item">
                      <a href="#faq" class="nav-link">FAQs</a>
