--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                      <a href="#testimonials" class="nav-link">Testimonials</a>
                   </li>
                   <li class="nav-item">
-                     <a href="#courses" class="nav-link">Instructor Resources</a>
+                     <a href="resources.html" class="nav-link">Instructor Resources</a>
                   </li>
                   <li class="nav-item">
                      <a href="#faq" class="nav-link">FAQs</a>
