[ENHANCEMENT] Added two more universities which reference the book, also broke the heading down into 2 parts. Former redirects to the course github page, the latter goes to the author's profile

--- a/resources.html
+++ b/resources.html
@@ -115,6 +115,7 @@
        </center>
       <!-- Hero End -->
       <!-- Testimonial Start -->
+      <!-- Eberhard -->
       <section class="section bg-light " id="resources">
          <div class="container">
             <div class="row justify-content-left">
@@ -139,53 +140,14 @@
                </div>
                <div class="col-md-8 ">
                   <div class="features-box mt-5 mt-sm-0 mb-4">
-                     <h4 class="text-dark "><a href="https://github.com/nishkalavallabhi/SfSCourseJan2021">NLP without Annotated Data by Dr. Sowmya Vajjala</a></h4>
+                     <h4 class="text-dark "><a href="https://github.com/nishkalavallabhi/SfSCourseJan2021">NLP without Annotated Data</a> by <a href="https://www.linkedin.com/in/sowmya-v-2a38734/">Dr. Sowmya Vajjala</a></h4>
                      <hr class="hr-dark">
                      <p class="mb-3 f-15 ">NLP without Annotated Data was course taught at SfS, Uni-Tuebingen in January 2021. It focuses on applying natural language processing techniquies with limited and no data. These slides are uploaded "as is", and hence are not polished for public consumption. 
                      </p>
                   </div>
                </div>
             </div>
-            <!-- <hr class="hr-dark">
-            <div class="row align-items-center" id="sebastian">
-               <div class="col-md-4" >
-                  <div class="features-img author-item">
-                     <img src="images/plaksha.png" alt="" class="img-fluid d-block mx-auto">
-                     <p class="text-dark text-center  font-weight-medium mb-0"> Scientist, Google DeepMind </p>
-                     <p class=" text-dark text-center  font-weight-medium mb-0"> 
-                        Author of newsletter NLP News
-                     </p>
-                  </div>
-               </div>
-               <div class="col-md-8 ">
-                  <div class="features-box mt-5 mt-sm-0 mb-4">
-                     <h4 class="text-dark "><a href="#">Sebastian Ruder</a></h4>
-                     <hr class="hr-dark">
-                     <p class="mb-3 f-15">This book does a great job bridging the gap between natural language processing (NLP) research and practical applications. From healthcare to e-commerce and finance, it covers many of the most sought-after domains where NLP is being put to use and walks through core tasks in a clear and understandable manner. Overall, the book is a great manual on how to get the most out of current NLP in your industry.
-                     </p>
-                  </div>
-               </div>
-            </div> -->
-            <!-- <hr class="hr-dark">
-            <div class="row align-items-center" id="marc">
-               <div class="col-md-4" >
-                  <div class="features-img author-item">
-                     <img src="images/quotes/marc.jpg" alt="" class="img-fluid d-block mx-auto">
-                     <p class="text-dark mb-0 text-center font-weight-medium"> Director, Google AI</p>
-                     <p class=" text-dark mb-0 text-center font-weight-medium"> 
-                        ACM & IEEE Fellow
-                     </p>
-                  </div>
-               </div>
-               <div class="col-md-8">
-                  <div class="features-box mt-5 mt-sm-0 mb-4">
-                     <h4 class="text-dark "><a href="#">Marc Najork</a></h4>
-                     <hr class="hr-dark">
-                     <p class="mb-3 f-15">There are two kinds of computer science books on the market: academic textbooks that give you a deep understanding of a domain but can be difficult to access for a non-academic, and "cookbooks" that outline solutions to very specific problems without providing the technical foundations that would allow the reader to generalize the recipes.  This book offers the best of both worlds: it is thorough yet accessible. It provides the reader with a solid foundation in natural-language processing,if you would like to go from zero to one in NLP, this book is for you!
-                     </p>
-                  </div>
-               </div>
-            </div> -->
+            <!-- Plaksha -->
             <hr class="hr-dark">
             <div class="row align-items-center">
                <div class="col-md-4" >
@@ -199,13 +161,53 @@
                </div>
                <div class="col-md-8">
                   <div class="features-box mt-5 mt-sm-0 mb-4">
-                     <h4 class="text-dark "><a href="#">Natural Language Processing by Dr. Monojit Choudhury                     </a></h4>
+                     <h4 class="text-dark "><a href="#">Natural Language Processing</a> by <a href="https://www.microsoft.com/en-us/research/people/monojitc/">Dr. Monojit Choudhury</a></h4>
                      <hr class="hr-dark">
                      <p class="mb-3 f-15">This was a course taught to undergraduate and graduate engineering students. Slides will be uploaded soon.</p>
                   </div>
                </div>
             </div>
-           
+            <!-- Ludwig -->
+            <hr class="hr-dark">
+            <div class="row align-items-center">
+               <div class="col-md-4" >
+                  <div class="features-img author-item">
+                     <img src="images/ludwig.png" alt="" class="img-fluid d-block mx-auto">
+                     <p class="text-dark mb-0 text-center font-weight-medium"> Ludwig Maximilian University</p>
+                     <p class=" text-dark mb-0 text-center font-weight-medium"> 
+                        Munich, Germany
+                     </p>
+                  </div>
+               </div>
+               <div class="col-md-8">
+                  <div class="features-box mt-5 mt-sm-0 mb-4">
+                     <h4 class="text-dark "><a href="https://econnlpcourse.github.io/course-materials/">Natural Language Processing for Economists</a> by <a href="https://www.linkedin.com/in/sowmya-v-2a38734/">Dr. Sowmya Vajjala</a></h4>
+                     <hr class="hr-dark">
+                     <p class="mb-3 f-15">This course introduces Natural Language Processing (and Machine Learning) to economist and explores how it can be used to address research questions in economics that require analysis of textual data.</p>
+                  </div>
+               </div>
+            </div>
+            <!-- Taiwan Normal -->
+            <hr class="hr-dark">
+            <div class="row align-items-center">
+               <div class="col-md-4" >
+                  <div class="features-img author-item">
+                     <img src="images/taiwan_normal.png" alt="" class="img-fluid d-block mx-auto">
+                     <p class="text-dark mb-0 text-center font-weight-medium"> National Taiwan Normal University</p>
+                     <p class=" text-dark mb-0 text-center font-weight-medium"> 
+                        Taipei City, Taiwan
+                     </p>
+                  </div>
+               </div>
+               <div class="col-md-8">
+                  <div class="features-box mt-5 mt-sm-0 mb-4">
+                     <h4 class="text-dark "><a href="https://alvinntnu.github.io/NTNU_ENC2045_LECTURES/intro.html">Computational Linguistics</a> by <a href="https://alvinchen.myftp.org/">Dr. Alvin Chen</a></h4>
+                     <hr class="hr-dark">
+                     <p class="mb-3 f-15"> This course aims to introduce useful strategies and common workflows that have been widely adopted by data scientists to extract useful insights from the textual data.</p>
+                  </div>
+               </div>
+            </div>
+            
             <!-- <hr class="hr-dark">
             <div class="row align-items-center">
                <div class="col-md-4" >
