[ENHANCEMENT] Added 'Looking for instructor resources?' phrase in home page

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
                      <img src="images/acad-logos.png" class="img-responsive" style="    max-width: 800px;margin:  0 auto;display: block;margin-bottom: 3%;"></a>
                      <center>
-                     <p class="lead text-dark mb-4 pb-2">Practical NLP is used as a reference book or a textbook at above-noted universities.</p>
+                     <p class="lead text-dark mb-4 pb-2">Practical NLP is used as a reference book or a textbook at above-noted universities.<br> Looking for instructor resources ? Please visit <a href="resources.html"><u>this</u></a> page. </p>
 </center>
                </div>
             </div>
